--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aiosignal (1.3.1-1pexip1) pexip; urgency=medium
+
+  * Prepare Pexip packaging
+
+ -- Huw Jones <huw@pexip.com>  Wed, 15 Feb 2023 15:07:06 +0000
+
 aiosignal (1.3.1-1) unstable; urgency=medium
 
   * New upstream release
