--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aiosignal (1.3.1-1pexip2) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 09:50:58 +0000
+
 aiosignal (1.3.1-1pexip1) pexip; urgency=medium
 
   * Prepare Pexip packaging
