--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aiosignal (1.3.1-1+pexip24u4) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 15:51:02 +0000
+
 aiosignal (1.3.1-1pexip3) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
